--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "mongodb": "^6.14.2",
     "mongoose": "^6.9.1",
     "nodemon": "^3.0.1"
   }
